# gemma3-mega-kernel-npu

./: .gitignore  .gitmodules  CMakeLists.txt  build_cmake_debug.sh  debug_ggml_to_tensor.sh
cpp_code/: CMakeLists.txt
cpp_code/ggml_to_tensor/: CMakeLists.txt  gemma3_common.cpp  gemma3_common.h
cpp_code/ggml_to_tensor/test/: debug_gguf_tensor..py  gemma3_ggml_to_tensor.cpp  load_gguf.py  random_ggml.py  random_ggml_to_tensor.cpp  single_tensor.gguf
cpp_code/load_tensor/: CMakeLists.txt  load_tensor_main.cpp
helpful_script/: dequantize_to_safe_tensor.sh  download_gemma3_quantize.sh  download_gpt_oss_quantize.sh  setup_venv.sh
python_code/: .gitignore
python_code/gemma3-evaluation/: .gitignore  batch_inference.py  single_inference.py  single_inference_high.py  single_inference_step_by_step.py
python_code/gemma3-evaluation/GemmaLearn/: common_module.py  learn_util.py  modeling_gemma3_learn.py  modeling_siglip_learn.py
python_code/gemma3-evaluation/test/: merge_safetensors.py  test.py  test_tensor.py
python_code/gpt-oss-evaluation/: .gitignore  single_inference.py  single_inference_high.py  single_inference_step_by_step.py
python_code/gpt-oss-evaluation/gptOSSLearn/: learn_util.py  modeling_gpt_oss_learn.py
